sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:13: error: not found: value Color1
      if (Color1==FarColor){
          ^NaiveBaseball:13: error: not found: value FarColor
      if (Color1==FarColor){
                  ^NaiveBaseball:14: error: not found: value i
        move(i,1)
             ^NaiveBaseball:17: error: not found: value i
        move(i,0)
             ^