sort.baseball.NaiveBaseball.scala.code
override def run() {
  while(isSorted()==false){
    for (i <- 0 to 4){
      var color0=getPlayerColor(i,0)
      var color1=getPlayerColor(i,1)
      }
      if (getHoleBase()-1<0){
        var FarColor=3
      }
      else{
        var FarColor=getHoleBase()-1
      }
      if (Color1==FarColor){
        move(i,1)
      }
                else {
        move(i,0)
      }
    }
}